--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g @continuum-restore 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l fish"
+set -g default-command "fish"
 set -g focus-events on
 set -g @fingers-key f
 set -g mouse on
@@ -85,8 +85,8 @@ bind-key -n C-p if-shell "$is_pgcli" "send-keys Up" "send-keys C-p"
 # the following vi-copy bindings match my vim settings
 #   see https://github.com/gpakosz/.vim.git
 bind-key -Tcopy-mode-vi v send -X begin-selection
-bind-key -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"\; send -X clear-selection
-bind-key -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"\; send -X clear-selection
+bind-key -Tcopy-mode-vi y send -X copy-pipe "pbcopy"\; send -X clear-selection
+bind-key -Tcopy-mode-vi Enter send -X copy-pipe "pbcopy"\; send -X clear-selection
 
 bind-key -Tcopy-mode-vi C-h  select-pane -L
 bind-key -Tcopy-mode-vi C-j  select-pane -D
@@ -109,8 +109,8 @@ bind-key -Tcopy-mode-vi MouseUp1Pane send -X clear-selection
 # Compatibility with original tmux.conf
 
 # edit configuration
-bind e new-window -n 'Tmux Config' "reattach-to-user-namespace -l sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
-bind V new-window -n 'Vim Edit' 'reattach-to-user-namespace -l sh -c '"'"'temp_file=$(mktemp) && pbpaste > $temp_file && nvim "+autocmd TextYankPost * if v:event.operator == \"y\" && v:event.regcontents == getline(1, \"\\\$\") && len(v:event.regcontents) > 1 && v:event.regtype ==# \"V\" | call feedkeys(\"ZZ\") | endif" $temp_file && pbcopy < $temp_file'"'"
+bind e new-window -n 'Tmux Config' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+bind V new-window -n 'Vim Edit' 'sh -c '"'"'temp_file=$(mktemp) && pbpaste > $temp_file && nvim "+autocmd TextYankPost * if v:event.operator == \"y\" && v:event.regcontents == getline(1, \"\\\$\") && len(v:event.regcontents) > 1 && v:event.regtype ==# \"V\" | call feedkeys(\"ZZ\") | endif" $temp_file && pbcopy < $temp_file'"'"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
