--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g @continuum-restore 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g default-shell $SHELL
-set -g default-command "fish"
+#set -g default-command "fish"
 set -g focus-events on
 set -g @fingers-key f
 set -g mouse on
