--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,8 +64,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 bind '"' split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind -r C-h previous-window
 bind -r C-l next-window     # select next window
@@ -110,7 +112,7 @@ bind-key -Tcopy-mode-vi MouseUp1Pane send -X clear-selection
 
 # edit configuration
 bind e new-window -n 'Tmux Config' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
-bind V new-window -n 'Vim Edit' 'sh -c '"'"'temp_file=$(mktemp) && pbpaste > $temp_file && nvim "+autocmd TextYankPost * if v:event.operator == \"y\" && v:event.regcontents == getline(1, \"\\\$\") && len(v:event.regcontents) > 1 && v:event.regtype ==# \"V\" | call feedkeys(\"ZZ\") | endif" $temp_file && pbcopy < $temp_file'"'"
+#bind V new-window -n 'Vim Edit' 'sh -c '"'"'temp_file=$(mktemp) && pbpaste > $temp_file && nvim "+autocmd TextYankPost * if v:event.operator == \"y\" && v:event.regcontents == getline(1, \"\\\$\") && len(v:event.regcontents) > 1 && v:event.regtype ==# \"V\" | call feedkeys(\"ZZ\") | endif" $temp_file && pbcopy < $temp_file'"'"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
