--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,8 +69,8 @@ bind % split-window -h -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 # bind c new-window -c "#{pane_current_path}"
 
-bind -r C-h previous-window
-bind -r C-l next-window     # select next window
+# bind -r C-h previous-window
+# bind -r C-l next-window     # select next window
 bind -r C-a last-window
 unbind-key l
 
