--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,7 +14,7 @@ bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        12.0
+font_size        14.0
 
 # The foreground color
 foreground       #c0b18b
@@ -241,3 +241,6 @@ macos_option_as_alt no
 macos_titlebar_color background
 
 allow_remote_control yes
+
+#theme
+include ./gruvbox_dark.conf
