--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,8 +51,8 @@ bind-key -r < swap-window -t -1
 bind-key -r > swap-window -t +1
 
 # Move panes
-bind -r } swap-pane -D       # swap current pane with the next one
-bind -r { swap-pane -U       # swap current pane with the previous one
+#bind -r } swap-pane -D       # swap current pane with the next one
+#bind -r { swap-pane -U       # swap current pane with the previous one
 
 # Cycle layouts
 bind-key -r n next-layout
@@ -136,7 +136,7 @@ setw -g clock-mode-style 24
 set -g monitor-activity on
 set -g visual-activity off
 
-set -sg escape-time 0
+set -sg escape-time 10
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
