--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # List of installed plugins
 set -g @tpm_plugins '                \
   tmux-plugins/tpm                   \
+  hallazzang/tmux-reset              \
   tmux-plugins/tmux-sensible         \
   nhdaly/tmux-better-mouse-mode	     \
   tmux-plugins/tmux-online-status    \
@@ -8,7 +9,13 @@ set -g @tpm_plugins '                \
   tmux-plugins/tmux-battery          \
   thalesmello/tmux-cpu               \
   tmux-plugins/tmux-copycat          \
+  arcticicestudio/nord-tmux          \
 '
+
+#set -g default-terminal "tmux-256color"
+#set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
+set -g default-terminal screen-256color
+set-option -ga terminal-overrides ",*256col*:Tc"
 
 # Plugin Configurations
 set -g @scroll-down-exit-copy-mode "off"
@@ -120,7 +127,7 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 set -g base-index 1         # start windows numbering at 1
 setw -g pane-base-index 1   # make pane numbering consistent with windows
 
-setw -g automatic-rename off
+setw -g automatic-rename on
 
 set -g renumber-windows on # renumber windows when a window is closed
 
@@ -141,7 +148,28 @@ set -sg escape-time 10
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
-if-shell "test -f ~/.tmux.theme" "source ~/.tmux.theme"
+#if-shell "test -f ~/.tmux.theme" "source ~/.tmux.theme"
+set -g @nord_tmux_show_status_content "0"
+
+#+----------------+
+#+ Plugin Support +
+#+----------------+
+#+--- tmux-prefix-highlight ---+
+set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
+set -g @prefix_highlight_output_suffix ""
+set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
+
+#+--------+
+#+ Status +
+#+--------+
+#+--- Bars ---+
+#set -g status-left "#[fg=black,bg=blue,bold] #S#[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{cpu_icon}#{cpu_percentage} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
+
+#+--- Windows ---+
+set -g window-status-format '#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]'
+set -g window-status-current-format '#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]'
+set -g window-status-separator ""
 
 run '~/.tmux/plugins/tpm/tpm'
-
