--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -769,18 +769,18 @@ key_bindings:
   #Fix Alt + key source: https://github.com/alacritty/alacritty/issues/62#issuecomment-347552058
   - { key: A,         mods: Alt,       chars: "\x1ba"                       }
   - { key: B,         mods: Alt,       chars: "\x1bb"                       }
-  - { key: C,         mods: Alt,       chars: "\x1bc"                       }
+    #- { key: C,         mods: Alt,       chars: "\x1bc"                       }
   - { key: D,         mods: Alt,       chars: "\x1bd"                       }
-  - { key: E,         mods: Alt,       chars: "\x1be"                       }
+    #- { key: E,         mods: Alt,       chars: "\x1be"                       }
   - { key: F,         mods: Alt,       chars: "\x1bf"                       }
   - { key: G,         mods: Alt,       chars: "\x1bg"                       }
   - { key: H,         mods: Alt,       chars: "\x1bh"                       }
-  - { key: I,         mods: Alt,       chars: "\x1bi"                       }
+    #- { key: I,         mods: Alt,       chars: "\x1bi"                       }
   - { key: J,         mods: Alt,       chars: "\x1bj"                       }
   - { key: K,         mods: Alt,       chars: "\x1bk"                       }
   - { key: L,         mods: Alt,       chars: "\x1bl"                       }
   - { key: M,         mods: Alt,       chars: "\x1bm"                       }
-  - { key: N,         mods: Alt,       chars: "\x1bn"                       }
+    #- { key: N,         mods: Alt,       chars: "\x1bn"                       }
   - { key: O,         mods: Alt,       chars: "\x1bo"                       }
   - { key: P,         mods: Alt,       chars: "\x1bp"                       }
   - { key: Q,         mods: Alt,       chars: "\x1bq"                       }
