--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -243,4 +243,5 @@ macos_titlebar_color background
 allow_remote_control yes
 
 #theme
-include ./gruvbox_dark.conf
+#include ./gruvbox_dark.conf
+include ./nord_theme.conf
