--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -114,7 +114,8 @@ font:
     family: FuraCode Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    #style: Regular
+    style: Retina
 
   # Bold font face
   bold:
@@ -150,7 +151,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 13.5
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
