--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,29 +8,16 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      FuraCode Nerd Font Retina
+font_family      Fira Code SemiBold
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        14.0
+font_size        13
 
 # The foreground color
-foreground       #c0b18b
-
-# The background color
-#background       #202020
-background       #272727
-
-# The foreground for selections
-selection_foreground #2f2f2f
-
-# The background for selections
-selection_background #d75f5f
-
-# The cursor color
-cursor           #8fee96
+#foreground       #c0b18b
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
@@ -125,98 +112,62 @@ active_tab_background #eee
 inactive_tab_foreground #444
 inactive_tab_background #999
 
-
-# The 16 terminal colors. There are 8 basic colors, each color has a dull and
-# bright version.
-
-# black
-color0   #2f2f2f
-color8   #555555
-
-# red
-color1   #d75f5f
-color9   #d75f5f
-
-# green
-color2    #d4d232
-color10   #8fee96
-
-# yellow
-color3    #af865a
-color11   #cd950c
-
-# blue
-color4   #22c3a1
-color12  #458588
-
-# magenta
-color5   #775759
-color13  #775759
-
-# cyan
-color6   #84edb9
-color14  #84edb9
-
-# white
-color7   #c0b18b
-color15  #d8d8d8
-
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
 # For a list of modifier names, see: http://www.glfw.org/docs/latest/group__mods.html
 # You can use the special action no_op to unmap a keyboard shortcut that is
 # assigned in the default configuration.
 
-# Clipboard
-map super+v             paste_from_clipboard
-map ctrl+shift+s        paste_from_selection
-map super+c             copy_to_clipboard
-map shift+insert        paste_from_selection
+# # Clipboard
+# map super+v             paste_from_clipboard
+# map ctrl+shift+s        paste_from_selection
+# map super+c             copy_to_clipboard
+# map shift+insert        paste_from_selection
 
 # Scrolling
-map ctrl+shift+up        scroll_line_up
-map ctrl+shift+down      scroll_line_down
-map ctrl+shift+k         scroll_line_up
-map ctrl+shift+j         scroll_line_down
-map ctrl+shift+page_up   scroll_page_up
-map ctrl+shift+page_down scroll_page_down
-map ctrl+shift+home      scroll_home
-map ctrl+shift+end       scroll_end
-map ctrl+shift+h         show_scrollback
+# map ctrl+shift+up        scroll_line_up
+# map ctrl+shift+down      scroll_line_down
+# map ctrl+shift+k         scroll_line_up
+# map ctrl+shift+j         scroll_line_down
+# map ctrl+shift+page_up   scroll_page_up
+# map ctrl+shift+page_down scroll_page_down
+# map ctrl+shift+home      scroll_home
+# map ctrl+shift+end       scroll_end
+# map ctrl+shift+h         show_scrollback
 
 # Window management
-map super+n             new_os_window
-map super+w             close_window
-map ctrl+shift+enter    new_window
-map ctrl+shift+]        next_window
-map ctrl+shift+[        previous_window
-map ctrl+shift+f        move_window_forward
-map ctrl+shift+b        move_window_backward
-map ctrl+shift+`        move_window_to_top
-map ctrl+shift+1        first_window
-map ctrl+shift+2        second_window
-map ctrl+shift+3        third_window
-map ctrl+shift+4        fourth_window
-map ctrl+shift+5        fifth_window
-map ctrl+shift+6        sixth_window
-map ctrl+shift+7        seventh_window
-map ctrl+shift+8        eighth_window
-map ctrl+shift+9        ninth_window
-map ctrl+shift+0        tenth_window
+# map super+n             new_os_window
+# map super+w             close_window
+# map ctrl+shift+enter    new_window
+# map ctrl+shift+]        next_window
+# map ctrl+shift+[        previous_window
+# map ctrl+shift+f        move_window_forward
+# map ctrl+shift+b        move_window_backward
+# map ctrl+shift+`        move_window_to_top
+# map ctrl+shift+1        first_window
+# map ctrl+shift+2        second_window
+# map ctrl+shift+3        third_window
+# map ctrl+shift+4        fourth_window
+# map ctrl+shift+5        fifth_window
+# map ctrl+shift+6        sixth_window
+# map ctrl+shift+7        seventh_window
+# map ctrl+shift+8        eighth_window
+# map ctrl+shift+9        ninth_window
+# map ctrl+shift+0        tenth_window
 
 # Tab management
-map ctrl+shift+right    next_tab
-map ctrl+shift+left     previous_tab
-map ctrl+shift+t        new_tab
-map ctrl+shift+q        close_tab
-map ctrl+shift+l        next_layout
-map ctrl+shift+.        move_tab_forward
-map ctrl+shift+,        move_tab_backward
+# map ctrl+shift+right    next_tab
+# map ctrl+shift+left     previous_tab
+# map ctrl+shift+t        new_tab
+# map ctrl+shift+q        close_tab
+# map ctrl+shift+l        next_layout
+# map ctrl+shift+.        move_tab_forward
+# map ctrl+shift+,        move_tab_backward
 
 # Miscellaneous
-map ctrl+shift+up      increase_font_size
-map ctrl+shift+down    decrease_font_size
-map ctrl+shift+backspace restore_font_size
+# map ctrl+shift+up      increase_font_size
+# map ctrl+shift+down    decrease_font_size
+# map ctrl+shift+backspace restore_font_size
 
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
@@ -231,7 +182,7 @@ map ctrl+shift+backspace restore_font_size
 # For example:
 #
 #symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
-macos_hide_titlebar yes
+macos_hide_titlebar no
 macos_option_as_alt no
 
 # Change the color of the kitty window's titlebar on macOS. A value of "system"
@@ -240,7 +191,7 @@ macos_option_as_alt no
 # as #12af59 or "red".
 macos_titlebar_color background
 
-allow_remote_control yes
+allow_remote_control no
 
 #theme
 #include ./gruvbox_dark.conf
