--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,9 +16,6 @@ bold_italic_font auto
 # Font size (in pts)
 font_size        13
 
-# The foreground color
-#foreground       #c0b18b
-
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
 
@@ -194,5 +191,6 @@ macos_titlebar_color background
 allow_remote_control no
 
 #theme
-#include ./gruvbox_dark.conf
-include ./nord_theme.conf
+#include ./themes/gruvbox_dark.conf
+include ./themes/nord.conf
+#include ./themes/kanagawa.conf
