--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,43 +1,25 @@
 # List of installed plugins
 set -g @tpm_plugins '                \
   tmux-plugins/tpm                   \
-  hallazzang/tmux-reset              \
-  tmux-plugins/tmux-sensible         \
   nhdaly/tmux-better-mouse-mode	     \
-  tmux-plugins/tmux-online-status    \
   tmux-plugins/tmux-prefix-highlight \
-  tmux-plugins/tmux-battery          \
   thalesmello/tmux-cpu               \
   tmux-plugins/tmux-copycat          \
-  arcticicestudio/nord-tmux          \
 '
-
-#set -g default-terminal "tmux-256color"
-#set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 set -g default-terminal screen-256color
 set-option -ga terminal-overrides ",*256col*:Tc"
+
+set -g monitor-bell off
+set -g bell-action none
+set -g visual-bell off
 
 # Plugin Configurations
 set -g @scroll-down-exit-copy-mode "off"
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-set -g @continuum-restore 'on'
-set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-capture-pane-contents 'on'
 set -g default-shell $SHELL
-#set -g default-command "fish"
 set -g focus-events on
 set -g @fingers-key f
 set -g mouse on
-set -g @batt_charged_icon '✓'
-set -g @batt_charging_icon ''
-set -g @batt_discharging_icon '↓'
-set -g @batt_full_charge_icon ""
-set -g @batt_high_charge_icon ""
-set -g @batt_medium_charge_icon ""
-set -g @batt_low_charge_icon ""
-set -g @batt_attached_icon '!'
-set -g @online_icon ""
-set -g @offline_icon "✗"
 set -g @asos-minlen 8
 set -g @cpu_icon " "
 set -g @open 'O'
@@ -48,7 +30,7 @@ unbind-key C-b
 bind-key C-Space send-prefix
 
 # Overrides for cursor shape
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+#set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Shortcut to clear history
 bind C send-keys C-l \; run 'tmux clear-history'
@@ -134,7 +116,7 @@ set -g renumber-windows on # renumber windows when a window is closed
 set -g wrap-search off # Don't wrap search in tmux
 
 set -g set-titles on                        # set terminal title
-set -g set-titles-string '#h ❐ #S ● #I #W'
+set -g set-titles-string '#S ● #I #W'
 
 # 24 hour clock
 setw -g clock-mode-style 24
@@ -145,31 +127,33 @@ set -g visual-activity off
 
 set -sg escape-time 10
 
+source-file "~/.config/tmux/themes/nightfox.conf"
+
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
+
 #if-shell "test -f ~/.tmux.theme" "source ~/.tmux.theme"
-set -g @nord_tmux_show_status_content "0"
-
-#+----------------+
-#+ Plugin Support +
-#+----------------+
-#+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
-set -g @prefix_highlight_output_suffix ""
-set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
-
-#+--------+
-#+ Status +
-#+--------+
-#+--- Bars ---+
-#set -g status-left "#[fg=black,bg=blue,bold] #S#[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{cpu_icon}#{cpu_percentage} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
-
-#+--- Windows ---+
-set -g window-status-format '#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]'
-set -g window-status-current-format '#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]'
-set -g window-status-separator ""
+# set -g @nord_tmux_show_status_content "0"
+#
+# #+----------------+
+# #+ Plugin Support +
+# #+----------------+
+# #+--- tmux-prefix-highlight ---+
+# set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
+# set -g @prefix_highlight_output_suffix ""
+# set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
+#
+# #+--------+
+# #+ Status +
+# #+--------+
+# #+--- Bars ---+
+# set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+# set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #{cpu_icon}#{cpu_percentage} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold]"
+#
+# #+--- Windows ---+
+# set -g window-status-format '#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]'
+# set -g window-status-current-format '#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W (#(pwd="#{pane_current_path}"; echo ${pwd####*/})) #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]'
+# set -g window-status-separator ""
 
 run '~/.tmux/plugins/tpm/tpm'
