--- a/tmux/themes/nightfox.conf
+++ b/tmux/themes/nightfox.conf
@@ -20,5 +20,5 @@ set -g status-right "#[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]#[
 setw -g window-status-activity-style "underscore,fg=#AEAFB0,bg=#131A24"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#AEAFB0,bg=#131A24"
-setw -g window-status-format '#[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]#[default] #I #W [ #(pwd="#{pane_current_path}"; echo ${pwd####*/})] #F #[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#131A24,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#719cd6,bg=#3b4261,bold] #I #W [ #(pwd="#{pane_current_path}"; echo ${pwd####*/})] #F #[fg=#3b4261,bg=#131A24,nobold,nounderscore,noitalics]'
+setw -g window-status-format '#[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]#[default] #I #W [ #(pwd="#{pane_current_path}"; echo ${pwd####*/})] #F #[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=#131A24,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#719cd6,bg=#3b4261,bold] #I #W [ #(pwd="#{pane_current_path}"; echo ${pwd####*/})] #F #[fg=#3b4261,bg=#131A24,nobold,nounderscore,noitalics]'
