Kitty: VictorMono font + Cursor shape fix
  - shell_integration no-cursor

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,16 +8,18 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      Fira Code SemiBold
+#font_family      Fira Code SemiBold
+font_family      VictorMono Nerd Font SemiBold
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        13
+font_size        14
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
+shell_integration no-cursor
 
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
