--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,14 +8,14 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-#font_family      Fira Code SemiBold
-font_family      VictorMono Nerd Font SemiBold
+font_family      Fira Code SemiBold
+#font_family      VictorMono Nerd Font SemiBold
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        14
+font_size        15
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
