--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,18 +4,18 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-# font_family Operator Mono Book
-# bold_font Operator Mono Thick
-# bold_italic_font Operator Mono Medium
-# font_family      Input Mono
-font_family      Fira Code SemiBold
-#font_family      VictorMono Nerd Font SemiBold
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+#font_family      Fira Code SemiBold
+#italic_font      auto
+#bold_font        auto
+#bold_italic_font auto
+
+font_family      Operator Mono SSm Lig Book
+italic_font      Operator Mono SSm Lig Book Italic
+bold_font        Operator Mono SSm Lig Medium
+bold_italic_font Operator Mono SSm Lig Medium Italic
 
 # Font size (in pts)
-font_size        15
+font_size        15.0
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
@@ -193,4 +193,4 @@ macos_titlebar_color background
 allow_remote_control no
 
 #theme
-include ./themes/nightfox.conf
+include ./themes/duskfox.conf
