--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,9 @@ set -g @tpm_plugins '                \
   thalesmello/tmux-cpu               \
   tmux-plugins/tmux-copycat          \
 '
-set -g default-terminal screen-256color
+
+# https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
+set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",*256col*:Tc"
 
 set -g monitor-bell off
