--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,8 +14,10 @@ italic_font      Operator Mono SSm Lig Book Italic
 bold_font        Operator Mono SSm Lig Medium
 bold_italic_font Operator Mono SSm Lig Medium Italic
 
+background_opacity 1.0
+
 # Font size (in pts)
-font_size        15.0
+font_size        16.0
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
@@ -100,16 +102,16 @@ window_border_width 1
 window_margin_width 5
 
 # The color for the border of the active window
-active_border_color #ffffff
+# active_border_color #ffffff
 
 # The color for the border of inactive windows
-inactive_border_color #cccccc
+# inactive_border_color #cccccc
 
 # Tab-bar colors
-active_tab_foreground #000
-active_tab_background #eee
-inactive_tab_foreground #444
-inactive_tab_background #999
+# active_tab_foreground #000
+# active_tab_background #eee
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
@@ -188,9 +190,9 @@ macos_option_as_alt no
 # means to use the default system color, a value of "background" means to use
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
-macos_titlebar_color background
+# macos_titlebar_color background
 
 allow_remote_control no
 
 #theme
-include ./themes/duskfox.conf
+include ./themes/rose-pine-moon.conf
