--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,6 +20,9 @@ background_opacity 1.0
 # Font size (in pts)
 font_size        16.0
 
+# Draw an extra border around the font with the given width
+macos_thicken_font 0.7
+
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
 shell_integration no-cursor
