--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,21 +4,29 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-#font_family      Fira Code SemiBold
-#italic_font      auto
-#bold_font        auto
-#bold_italic_font auto
+# => -> != == 
+# ---
+# ===
 
-font_family      Operator Mono SSm Lig Book
-italic_font      Operator Mono SSm Lig Book Italic
-bold_font        Operator Mono SSm Lig Medium
-bold_italic_font Operator Mono SSm Lig Medium Italic
+#font_family      FiraCode Nerd Font Mono
+font_family      JetBrainsMono Nerd Font
+# font_family      OpenDyslexicMono Nerd Font
+#font_family      CaskaydiaCove Nerd Font Mono
+italic_font      auto
+bold_font        auto
+bold_italic_font auto
+
+#symbol_map codepoints FiraCode Nerd Font Mono 
+
+#font_family      Operator Mono SSm Lig Book
+#italic_font      Operator Mono SSm Lig Book Italic
+#bold_font        Operator Mono SSm Lig Medium
+#bold_italic_font Operator Mono SSm Lig Medium Italic
 
 background_opacity 1.0
-#background_opacity 0.8
 
 # Font size (in pts)
-font_size        16.0
+font_size        14.0
 
 # Draw an extra border around the font with the given width
 macos_thicken_font 0.7
@@ -198,5 +206,7 @@ macos_option_as_alt no
 
 allow_remote_control no
 
+confirm_os_window_close 0
+
 #theme
-include ./themes/rose-pine-moon.conf
+include ./themes/tokyonight_night.conf
