--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,8 @@ set -g visual-bell off
 # Plugin Configurations
 set -g @scroll-down-exit-copy-mode "off"
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-set -g default-shell $SHELL
+#set -g default-shell $SHELL
+set -g default-shell /opt/homebrew/bin/fish
 set -g focus-events on
 set -g @fingers-key f
 set -g mouse on
