git: neovim 4 way mergetool

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,13 +3,20 @@
 	helper = osxkeychain
 
 [merge]
-	tool = vscode
+	tool = nvimdiff4
+
+[mergetool]
+	keepBackup = false
+	prompt = true
 
 [mergetool "vscode"]
 	cmd = code --wait $MERGED
 
 [mergetool "nvimdiff4"]
 	cmd = nvim -d $LOCAL $BASE $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+
+[mergetool "nvimdiff3"]
+	cmd = "nvim -d -c \"wincmd l\" -c \"norm ]c\" \"$LOCAL\" \"$MERGED\" \"$REMOTE\""
 
 [diff]
   algorithm = patience
@@ -21,9 +28,6 @@
 
 [difftool "nvimdiff"]
 	cmd = nvim -d \"$LOCAL\" \"$REMOTE\" -c \"wincmd w\" -c \"wincmd L\"
-
-[mergetool]
-	keepBackup = false
 
 [core]
 	autocrlf = input
