feat(tmux): split window binds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,9 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
