--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,10 +14,12 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
+set -g status on #[off | on | 2 | 3 | 4 | 5]
+set -g status-justify left #[left | centre | right | absolute-centre]
+set -g status-position top #[top | bottom]
 
 set-window-option -g mode-keys vi
 
-set-option -g status-position bottom
 set -g status-left-length 100
 set -g status-right-length 100
 
@@ -39,11 +41,9 @@ set -g @plugin 'catppuccin/tmux#v2.1.1'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "basic" 
 set -g @catppuccin_window_flags "icon" # none, icon, or text
+
 set -g @catppuccin_window_current_text " #{b:pane_current_path}"
 set -g @catppuccin_window_text " #{b:pane_current_path}"
-
-set -q @catppuccin_status_left_separator "▐"
-set -g @catppuccin_status_right_separator "▌"
 
 set -g status-left "#{E:@catppuccin_status_session} "
 set -g status-right "#{E:@catppuccin_status_application}"
