--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,9 +28,23 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# pane resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# Move window to the right or left
+bind-key -r < swap-window -t -1
+bind-key -r > swap-window -t +1
+
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
+bind Enter copy-mode # enter copy mode
+# bind b list-buffers  # list paster buffers
+# bind p paste-buffer  # paste from the top pate buffer
+# bind P choose-buffer # choose which buffer to paste from
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
