--- a/kanata/com.github.jtroo.kanata.plist
+++ b/kanata/com.github.jtroo.kanata.plist
@@ -7,7 +7,7 @@
 
     <key>ProgramArguments</key>
     <array>
-      <string>$REPLACE_WITH_HOME_PATH/.local/bin/kanata/</string>
+      <string>/opt/homebrew/bin/kanata</string>
         <string>-c</string>
         <string>$REPLACE_WITH_HOME_PATH/.config/kanata/kanata.kbd</string>
     </array>
