--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,9 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status on #[off | on | 2 | 3 | 4 | 5]
-set -g status-justify left #[left | centre | right | absolute-centre]
+set -g status-justify centre #[left | centre | right | absolute-centre]
 set -g status-position top #[top | bottom]
+set -g wrap-search off # Don't wrap search in tmux
 
 set-window-option -g mode-keys vi
 
