--- a/ghostty/config
+++ b/ghostty/config
@@ -1,15 +1,18 @@
-theme = tokyonight
+#theme = tokyonight
+theme = rose-pine
 mouse-hide-while-typing = true
 cursor-style = block
 cursor-style-blink = false
 window-decoration = true
 macos-option-as-alt = true
+adjust-cell-height = 35%
+window-colorspace=display-p3
 
 font-size = 18
-#font-family = Monaspace Neon
+font-family = Monaspace Neon
 #font-family = Monaspace Argon
 #font-family = Monaspace Xenon
-font-family = Monaspace Radon
+#font-family = Monaspace Radon
 #font-family = Monaspace Krypton
 
 font-feature = calt
