--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,28 +1,17 @@
-# unbind r
-# bind r source-file ~/.config/tmux/tmux.conf
-
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g prefix C-a
-
 set -g mouse on
-
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status on #[off | on | 2 | 3 | 4 | 5]
-set -g status-justify centre #[left | centre | right | absolute-centre]
-set -g status-position top #[top | bottom]
 set -g wrap-search off # Don't wrap search in tmux
 
-set-window-option -g mode-keys vi
-
-set -g status-left-length 100
-set -g status-right-length 100
+setw -g mode-keys vi
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -40,7 +29,7 @@ bind-key -r < swap-window -t -1
 bind-key -r > swap-window -t +1
 
 bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind v split-window -h -b -c "#{pane_current_path}"
 
 bind Enter copy-mode # enter copy mode
 # bind b list-buffers  # list paster buffers
@@ -53,15 +42,23 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.1'
 
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "basic" 
-set -g @catppuccin_window_flags "icon" # none, icon, or text
-
+set -g @catppuccin_flavor "mocha" # mocha, macchiato
+set -g @catppuccin_window_status_style "rounded" #basic, rounded
+set -g @catppuccin_window_flags "none" # none, icon, or text
 set -g @catppuccin_window_current_text " #{b:pane_current_path}"
 set -g @catppuccin_window_text " #{b:pane_current_path}"
 
-set -g status-left "#{E:@catppuccin_status_session} "
-set -g status-right "#{E:@catppuccin_status_application}"
+set -g status on #[off | on | 2 | 3 | 4 | 5]
+set -g status-justify absolute-centre #[left | centre | right | absolute-centre]
+set -g status-style "bg=#{@thm_bg}"
+set -g status-position top #[top | bottom]
+
+set -g status-left-length 100
+set -g status-left ""
+
+set -g status-right-length 100
+# set -g status-right "#{E:@catppuccin_status_application}"
+set -g status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
