--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,10 +37,10 @@ bind Enter copy-mode # enter copy mode
 # bind P choose-buffer # choose which buffer to paste from
 
 # toogle window name with pane_current_path
-bind r run-shell 'if [ "#{window_name}" = "Window" ]; then tmux rename-window "#{b:pane_current_path}"; else tmux rename-window "Window"; fi'
+bind r run-shell 'if [ "#{window_name}" = "Window" ]; then tmux rename-window " #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} ->  #{pane_current_command}"; else tmux rename-window "Window"; fi'
 
 # configure how window list is shown at choose-tree
-bind w choose-tree -w -F "[#{window_index}] #{window_name} - #{b:pane_current_path} (#{pane_current_command})"
+bind w choose-tree -w -F " #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} ->  #{pane_current_command}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
