--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,8 +25,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Move window to the right or left
-bind-key -r < swap-window -t -1
-bind-key -r > swap-window -t +1
+bind-key -r < swap-window -t -1\; select-window -t -1
+bind-key -r > swap-window -t +1\; select-window -t +1
 
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -b -c "#{pane_current_path}"
